# 3d-plant-evolution

./: .gitignore  .gitmodules  CMakeLists.txt  gl_testapp.code-workspace  packages.txt
2022CuteKitty/: CMakeLists.txt
2022CuteKitty/resources/: .tex_frag1.glsl.swp  shadow_frag.glsl  shadow_vert.glsl
2022CuteKitty/src/: MatrixStack.cpp  main.cpp
2022NormalBase/: CMakeLists.txt
2022NormalBase/resources/: shadow_frag.glsl  shadow_vert.glsl
2022NormalBase/src/: MatrixStack.cpp  Shape.cpp  Shape.h  WindowManager.cpp  main.cpp  util.h
2022NormalBase/turnin_images/: figure_1  figure_2  turnin.odt
3d_tree_ex/: CMakeLists.txt  imgui.ini
3d_tree_ex/asset/shader/: debug.glsl.frag  depth.glsl.geom  directional.glsl.frag  geometry.glsl.frag  globals.glslinc  lighting.glsl.frag  phong.glsl.vert  point_lighting.glsl.frag  point_lighting.glsl.vert  post_fx_bloom_blur.glsl.frag  sky.glsl.frag  sky.glsl.vert
3d_tree_ex/asset/shader/sky/: sky.glsl.vert
3d_tree_ex/include/: Sphere.h  random_generators.h  tests.h  tree.h
3d_tree_ex/src/: Sphere.cpp  debug.cpp  game.cpp  imgui_impl_glfw.cpp  main.cpp  player.cpp  tree.cpp
DeferBase22/: .gitignore  CMakeLists.txt
DeferBase22/resources/: gbuf_frag.glsl  simple_vert.glsl  tex_frag.glsl
DeferBase22/src/: MatrixStack.cpp  Shape.cpp  WindowManager.cpp  main.cpp
ShadowBase22/: CMakeLists.txt
ShadowBase22/resources/: shadow_frag.glsl  shadow_vert.glsl
ShadowBase22/src/: .main.cpp.swp  main.cpp
SunnyBunnyBase2022/: CMakeLists.txt
SunnyBunnyBase2022/resources/: simple_frag.glsl  simple_vert.glsl  tex_frag.glsl
SunnyBunnyBase2022/src/: Shape.cpp  Shape.h  WindowManager.cpp  main.cpp
SuperShape3DAudioVis/lab texture skybox billboards/: lab texture.sln
SuperShape3DAudioVis/lab texture skybox billboards/resources/: shader_fragment.glsl  skyfrag.glsl
SuperShape3DAudioVis/lab texture skybox billboards/src/: Sphere.cpp  lab texture.aps  lab texture.vcxproj  lab texture.vcxproj.filters  main.cpp  recordAudio.cpp  recordAudio.h  resource.h
SuperShape3DAudioVis/lab texture skybox billboards/src/Debug/: lab texture.exe.recipe  lab texture.ilk  vc143.idb
SuperShape3DAudioVis/lab texture skybox billboards/src/Debug/lab texture.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab texture.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
ev2/: CMakeLists.txt
ev2/include/: Sphere.h  application.h  bounds.h  buffer.h  camera.h  delegate.h  ev.h  ev_gl.h  frustum.h  geometry.h  gltf.h  input.h  material.h  mesh.h  node.h  physics.h  reference_counted.h  renderer.h  resource.h  scene.h  shader.h  singleton.h  texture.h  transform.h  uniform.h  util.h  vertex_buffer.h  visual_instance.h  visual_nodes.h  window.h
ev2/include/renderer/: buffer.h  camera.h  debug_renderer.h  ev_gl.h  material.h  mesh.h  model.h  renderer.h  shader.h  terrain.h  texture.h  vao.h  vertex_buffer.h
ev2/src/: Sphere.cpp  Sphere.h  buffer.cpp  ev.cpp  glfw_context.cpp  glfw_context.h  gltf_loader.cpp  input.cpp  mesh.cpp  node.cpp  obj_loader.cpp  physics.cpp  renderer.cpp  resource.cpp  scene.cpp  shader.cpp  texture.cpp  util.cpp  vertex_buffer.cpp  visual_nodes.cpp  window.cpp
ev2/src/renderer/: buffer.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  terrain.cpp  texture.cpp  vao.cpp  vertex_buffer.cpp
ev2_tests/: CMakeLists.txt  imgui.ini
ev2_tests/asset/models/: Wagon.mtl
ev2_tests/asset/models/house/: house.mtl
ev2_tests/asset/shader/: basic.glsl.frag  basic.glsl.vert  debug.glsl.frag  debug.glsl.vert  directional.glsl.frag  disney.glsl.frag  disney.glslinc  geometry.glsl.frag  geometry.glsl.vert  geometry_instanced.glsl.vert  globals.glslinc  lighting.glsl.frag  pbr.glsl.frag  phong.glsl.frag  phong.glsl.vert  point_lighting.glsl.frag  point_lighting.glsl.vert  point_lighting.glslinc  post_fx.glsl.frag  post_fx_bloom_combine.glsl.frag  shadow.glsl.vert  simpleDepth.glsl.vert  sky.glsl.vert  ssao.glsl.frag  ssao_blur.glsl.frag  sst.glsl.vert  sst1.glsl.vert
ev2_tests/asset/shader/sky/: sky.glsl.frag  sky.glsl.vert
ev2_tests/include/: Sphere.h  debug.h  game.h  player.h  tree.h
ev2_tests/src/: Sphere.cpp  debug.cpp  game.cpp  imgui_impl_opengl3.cpp  main.cpp  player.cpp  shader_tests.cpp  tree.cpp
resources/: tex_frag.glsl
scripts/: record_perf.sh
ssre/: CMakeLists.txt
ssre/include/: buffer.h  camera.h  cloneable.h  delegate.h  geometry.h  material.h  mesh.h  renderer.h  resource.h  scene.h  shader.h  simpleShading.h  singleton.h  skysphere.h  ssre.h  ssre_gl.h  texture.h  tiny_obj_wrapper.h  uniform.h  viewport.h  window.h
ssre/src/: buffer.cpp  camera.cpp  geometry.cpp  glfw_context.cpp  glfw_context.h  material.cpp  mesh.cpp  renderer.cpp  resource.cpp  scene.cpp  shader.cpp  simpleShading.cpp  skysphere.cpp  ssre.cpp  texture.cpp  uniform.cpp  viewport.cpp  window.cpp
submodules/: CMakeLists.txt
testapp/: CMakeLists.txt
testapp/asset/shader/: depth.glsl.frag  depth.glsl.vert  pbr.glsl.vert  phong.glsl.frag  sky.glsl.frag  sky.glsl.vert
testapp/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp  p_tree.cpp  shader_test.cpp
vfc_base2022v2/: CMakeLists.txt
vfc_base2022v2/resources/: f.glsl  frag.glsl  simple_frag.glsl  simple_vert.glsl  tex_frag0.glsl  tex_vert.glsl  v2.glsl  vert.glsl
vfc_base2022v2/src/: MatrixStack.cpp  Spline.cpp  Spline.h  main.cpp  transForms.h
